# editor

./: .coveragerc  .gitignore  .travis.yml  404.html  CHANGELOG  README.md  README.rst  editor.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  test.sh  test_editor.py  test_requirements.txt
.github/workflows/: python-package.yml
docs/: index.md
editor/: __init__.py
test/: test_editor.py
