[tool.doks]
auto = true

[tool.poetry]
name = "editor"
version = "1.6.6"
description = "🖋 Open the default text editor 🖋"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rec/editor"
homepage = "https://github.com/rec/editor"
documentation = "https://rec.github.io/editor"

[tool.poetry.dependencies]
python = ">=3.8"
runs = "*"
xmod = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
ruff = "*"
tdir = "*"

[tool.coverage.run]
branch = true
source = ["editor"]

[tool.coverage.report]
fail_under = 95
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if False:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
