[project]
name = "editor"
version = "1.6.6"
description = "🖋 Open the default text editor 🖋"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "runs",
    "xmod",
]

[project.urls]
Homepage = "https://github.com/rec/editor"
Repository = "https://github.com/rec/editor"
Documentation = "https://rec.github.io/editor"

[tool.doks]
auto = true

[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "ruff",
    "tdir",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["editor"]

[tool.coverage.report]
fail_under = 95
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if False:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
