[project]
name = "editor"
version = "1.7.0"
description = "🖋 Open the default text editor 🖋"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]
dependencies = [
    "runs",
    "xmod",
]

[project.urls]
Homepage = "https://github.com/rec/editor"
Repository = "https://github.com/rec/editor"
Documentation = "https://rec.github.io/editor"

[tool.doks]
auto = true

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pyupgrade>=3.21.2",
    "ruff",
    "tdir",
    "ty>=0.0.14",
]

[tool.coverage.run]
branch = true
source = ["editor"]

[tool.coverage.report]
fail_under = 95
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"


[tool.poetry]
name = "editor"
version = "0.1.0"
description = "🖋 Open the default text editor 🖋"
authors = ["Tom Ritchford <tom@swirly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
